Cleanup deprecation